--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 3000
 
-DB = mongodb+srv://paulynak:vecta@vecta-corp.bsvdvbn.mongodb.net/vectaCorp?retryWrites=true&w=majority
+DB = mongodb+srv://paulynak:<password>@vecta-corp.bsvdvbn.mongodb.net/vectaCorp?retryWrites=true&w=majority
